[package]
name = "prolapse"
version = "0.1.0"
authors = ["Andrew Baxter <rhinocratic@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
chrono = "0.4.0"
# google-drive3 = "^1.0.10"
# openssl = { version = "0.10", features = ["vendored"] }
